--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next-mdx-remote": "^5.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.66.0",
     "sass": "^1.89.2",
     "valtio": "^1.13.2"
   },
